<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topics"
        android:textSize="50sp"
        android:padding="16dp"
        android:focusable="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/history_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic1"
        android:textSize="40sp"
        android:padding="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/geography_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic2"
        android:textSize="40sp"
        android:padding="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/culture_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic3"
        android:textSize="40sp"
        android:padding="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/cuisine_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic4"
        android:textSize="40sp"
        android:padding="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <ImageView
        android:id="@+id/flag_map"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:contentDescription="Country Flag Map"
        android:scaleType="fitCenter"
        android:src="@drawable/usa_flag_map" />

    <TextView
        android:id="@+id/country_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome!"
        android:textSize="45sp"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:enabled="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>



    </LinearLayout>